# gz2zip

./: README.md  cli.py  core.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
benchmarks/: speed_experiment.py
gz2zip/: __init__.py  __main__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
