[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gz2zip"
version = "0.1.0.post1"
description = "Fast GZIP-to-ZIP/ZIP64 conversion without recompression"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = []
keywords = ["gzip", "zip", "zip64", "deflate", "streaming", "repack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Compression",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

[project.scripts]
gz2zip = "gz2zip.cli:main"

[project.urls]
Homepage = "https://github.com/45deg/gz2zip"
Repository = "https://github.com/45deg/gz2zip"
Issues = "https://github.com/45deg/gz2zip/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
packages = ["gz2zip"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "memory_heavy: marks memory-intensive tests (excluded in CI)",
]
